nginx-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - name: http
          containerPort: 80
  volumes:
    - name: cfg
      items:
