nginx-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 10 # tells deployment to run 2 pods matching the template
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2 # 增加多少pod  个数、百分比
      maxUnavailable: 2 # 最多不可用pod
  template:
    metadata:
      labels:
        app: nginx
    spec:
      # hostIPC: true
      # hostNetwork: true
      # hostPID: true
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80 # 容器端口
              # hostPort: 30080 # 主机端口
              name: http
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
        - name: redis
          image: redis:5
        - name: centos
          image: centos:7
          command:
            - "/bin/bash"
            - "-c"
            - "/usr/bin/ping 127.0.0.1"
# pod*5 + rs + dp
