nginx-po.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-po
  labels:
    app: nginx-po
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80 # 容器端口
      resources:
        limits:
          memory: 512Mi
          cpu: "1"
        requests:
          memory: 256Mi
          cpu: "0.2"
  serviceAccountName: "default"
  # imagePullSecrets:弃用、使用serviceAccountName
