extren-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  ports:
    - name: http  # must be same
      port: 80
      targetPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: frontend-service
subsets:
  - addresses:
      - ip: 192.168.1.3
    ports:
      - name: http
        port: 8000
---
apiVersion: v1
kind: Pod
metadata:
  name: centos
spec:
  containers:
    - name: centos
      image: centos:7
      command:
        - "bin/bash"
        - "-c"
        - "sleep 10000"
