filebeat-ds.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        role: logstor
    spec:
      hostNetwork: false
      containers:
        - name: redis
          image: redis:4.0-alpine
          ports:
            - name: redis
              containerPort: 6379
              hostPort: 12356
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat-ds
spec:
  selector:
    matchLabels:
      app: filebeat
      release: stable
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: filebeat
        release: stable
    spec:
      containers:
        - name: filebeat
          image: ikubernetes/filebeat:5.6.5-alpine
---
kind: Service
apiVersion: v1
metadata:
  name: redis
spec:
  type: LoadBalancer
  ports:
    - name: redis
      port: 6379
      protocol: TCP
  selector:
    app: redis
