myapp-rs.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: ingress-nginx
  name: nginx
spec:
  # type: LoadBalancer
  ports:
    - name: nginx
      port: 8001
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
