nginx-pod-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo
  namespace: default
  labels:
    app: myapp
spec:
  containers:
    - name: httpd
      image: busybox:latest
      imagePullPolicy: IfNotPresent
      command: ["/bin/httpd", "-f", "-h", "/data/web/html"]
      ports:
        - name: http
          containerPort: 80
      volumeMounts:
        - name: html
          mountPath: /data/web/html/
    - name: busybox
      image: busybox
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - name: html
          mountPath: /data/
        - name: git
          mountPath: /data2/
      command:
        - "/bin/sh"
        - "-c"
        - "while true; do echo $(date) >> /data/index.html; sleep 2; done"
      args:
        - ""
  volumes:
    - name: html
      emptyDir: {}
    - name: git
      gitRepo:
        directory: "."
        repository: "https://gitee.com/ls-2018/kafka.git"
    - name: host
      hostPath:
        path: "/data/pod/volumel"
        type: DirectoryOrCreate
    - name: nfs
      nfs:
        path: /data/volumes
        server: store1
        ReadOnly: false
        # path: "/data/pod/volumel"
        # type: DirectoryOrCreate
---
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  ports:
    - name: nginx
      port: 8001
      targetPort: 80
      protocol: TCP
  selector:
    app: myapp
# pod + service
